add days of the week

--- a/JavaScript Learning/todolist-v1/views/list.ejs
+++ b/JavaScript Learning/todolist-v1/views/list.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Todo Listr</title>
+  <title>Todo List</title>
 </head>
 <body>
     <h1>Happy <%= kindOfDay %>!</h1>
