--- a/JavaScript Learning/todolist-v1/views/list.ejs
+++ b/JavaScript Learning/todolist-v1/views/list.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Todo List</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
      <h1><%= kindOfDay %> Todo List</h1>
