--- a/JavaScript Learning/todolist-v1/views/list.ejs
+++ b/JavaScript Learning/todolist-v1/views/list.ejs
@@ -7,17 +7,21 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="box" id="heading">
      <h1><%= kindOfDay %> Todo List</h1>
-
-     <ul>
+    </div>
+    <div class="box">
         <% for (var i = 0; i < newListItems.length; i++){ %>
-            <li><%= newListItems[i] %></li>
+        <div class="item">
+          <input type="checkbox">
+            <p><%= newListItems[i] %></p>
+        </div>
         <% } %>
-     </ul>
 
-     <form action="/" method="post">
-        <input type="text" name="newItem" />
-        <button type="submit" name="button">Add</button>
-     </form>
+        <form class="item" action="/" method="post">
+            <input type="text" name="newItem" placeholder="New Item" />
+            <button type="submit" name="button">+</button>
+         </form>
+    </div>
 </body>
 </html>
