--- a/JavaScript Learning/todolist-v1/views/list.ejs
+++ b/JavaScript Learning/todolist-v1/views/list.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="box" id="heading">
-     <h1><%= kindOfDay %> Todo List</h1>
+     <h1><%= listTitle %></h1>
     </div>
     <div class="box">
         <% for (var i = 0; i < newListItems.length; i++){ %>
@@ -19,8 +19,8 @@
         <% } %>
 
         <form class="item" action="/" method="post">
-            <input type="text" name="newItem" placeholder="New Item" />
-            <button type="submit" name="button">+</button>
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off" />
+            <button type="submit" name="list" value=<%= listTitle %>>+</button>
          </form>
     </div>
 </body>
