--- a/JavaScript Learning/todolist-v1/views/list.ejs
+++ b/JavaScript Learning/todolist-v1/views/list.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<%- include("header") -%>
 
-<head>
-  <meta charset="utf-8">
-  <title>Todo List</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
     <div class="box" id="heading">
      <h1><%= listTitle %></h1>
     </div>
@@ -23,5 +16,5 @@
             <button type="submit" name="list" value=<%= listTitle %>>+</button>
          </form>
     </div>
-</body>
-</html>
+    <%- include("footer") -%>
+
