--- a/JavaScript Learning/EJS Challenge Starting Files/ejs-challenge/public/css/styles.css
+++ b/JavaScript Learning/EJS Challenge Starting Files/ejs-challenge/public/css/styles.css
@@ -12,7 +12,7 @@
     letter-spacing: 5px;
 }
 .navbar-nav  li a:hover {
-    color: #1a78bc !important;
+    color: #f3cd5d !important;
 }
 
 .footer-padding {
@@ -25,11 +25,11 @@
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	background-color: #1a78bc;
+	background-color: #f5dc91;
 }
 
 .footer p {
 	margin-top: 25px;
 	font-size: 12px;
-  color: #fff;
+  color: #000;
 }
