--- a/JavaScript Learning/EJS Challenge Starting Files/ejs-challenge/views/about.ejs
+++ b/JavaScript Learning/EJS Challenge Starting Files/ejs-challenge/views/about.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 
 <h1>About</h1>
-<p><%= about %></p>
+<p><%= aboutContent %></p>
 
 <%- include("partials/footer") -%>
