--- a/JavaScript Learning/EJS Challenge Starting Files/ejs-challenge/views/compose.ejs
+++ b/JavaScript Learning/EJS Challenge Starting Files/ejs-challenge/views/compose.ejs
@@ -1,9 +1,16 @@
 <%- include("partials/header") -%>
 
 <h1>Compose</h1>
-<form action="/" method="post">
-    <input type="text" name="compose" />
-    <button type="submit" name="publish">Publish</button>
+<form action="/compose" method="post">
+    <div class="form-group">
+        <label for="exampleFormControlInput1">Title</label>
+        <input class="form-control" id="exampleFormControlInput1" type="text" name="postTitle" >
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Post</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" type="text" name="postMessage"></textarea>
+      </div>
+      <button class="btn btn-primary" type="submit" name="button">Publish</button>
 </form>
 
 
