--- a/JavaScript Learning/EJS Challenge Starting Files/ejs-challenge/views/home.ejs
+++ b/JavaScript Learning/EJS Challenge Starting Files/ejs-challenge/views/home.ejs
@@ -5,7 +5,8 @@
 
 <% posts.forEach(function(post){ %>
     <h2><%= post.title %></h2>
-    <p><%= post.message.substring(0, 100) + "..." %></p>
+    <p><%= post.message.substring(0, 100) + "... " %>
+        <a href="/posts/<%= post.title %>">Read More</a></p>
 <% }); %>
 
 
