--- a/JavaScript Learning/CardProject/public/css/styles.css
+++ b/JavaScript Learning/CardProject/public/css/styles.css
@@ -9,6 +9,13 @@ html {
     color: #000;
     padding: 10px;
   }
+
+  .center-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+  }
   
   .box {
     max-width: 400px;
@@ -23,39 +30,14 @@ html {
     text-align: center;
   }
   
-  .item {
-    min-height: 70px;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #F1F1F1;
-  }
-  
-  .item:last-child {
-    border-bottom: 0;
-  }
-  
-  input:checked+p {
-    text-decoration: line-through;
-    text-decoration-color: #3e97a1;
-  }
-  
-  input[type="checkbox"] {
-    margin: 20px;
-  }
-  
   p {
     margin: 0;
     padding: 20px;
     font-size: 20px;
     font-weight: 200;
-    color: #00204a;
+    color: #000;
   }
-  
-  form {
-    text-align: center;
-    margin-left: 20px;
-  }
-  
+
   button {
     min-height: 50px;
     width: 50px;
@@ -67,28 +49,12 @@ html {
     padding-bottom: 6px;
     border-width: 0;
   }
-  
-  input[type="text"] {
+    
+  #footer {
+    background-color: #b0ab8f;
     text-align: center;
-    height: 60px;
-    top: 10px;
-    border: none;
-    background: transparent;
-    font-size: 20px;
-    font-weight: 200;
-    width: 313px;
   }
-  
-  input[type="text"]:focus {
-    outline: none;
-    box-shadow: inset 0 -3px 0 0 #3e97a1;
-  }
-  
-  ::placeholder {
-    color: grey;
-    opacity: 1;
-  }
-  
+
   footer {
     color: white;
     color: rgba(0, 0, 0, 0.5);
