--- a/JavaScript Learning/CardProject/public/css/styles.css
+++ b/JavaScript Learning/CardProject/public/css/styles.css
@@ -10,6 +10,11 @@ html {
     padding: 10px;
   }
 
+  h2 {
+    color: #000;
+    padding: 10px;
+  }
+
   .center-image {
     display: flex;
     justify-content: center;
