--- a/JavaScript Learning/CardProject/public/css/styles.css
+++ b/JavaScript Learning/CardProject/public/css/styles.css
@@ -43,15 +43,15 @@ html {
     color: #000;
   }
 
-  /* button {
+  button {
     border-radius: 10%;
     border-color: transparent;
-    background-color: #30aab8;
-    color: #fff;
-    font-size: 30px;
-    padding-bottom: 6px;
+    background-color: #b0ab8f;
+    color: #000;
+    font-size: 20px;
+    padding: 5px;
     border-width: 0;
-  } */
+  }
     
   #footer {
     background-color: #b0ab8f;
